--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,12 @@ local.properties
 # PDT-specific (PHP Development Tools)
 .buildpath
 
+# Eclipse Core      
+.project
+
+# JDT-specific (Eclipse Java Development Tools)     
+.classpath
+
 # sbteclipse plugin
 .target
 
