--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/admin/Documents/AAUni/3er Sem/DPOO/json-20230618.jar"/>
+	<classpathentry kind="lib" path="C:/Users/manul/Downloads/json-20230618.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
